--- a/doc_modern/rst/source/gallery/ex20.rst
+++ b/doc_modern/rst/source/gallery/ex20.rst
@@ -11,7 +11,7 @@ programs :doc:`psxy </psxy>` and
 that allows for a fair bit of flexibility in designing ones own symbols.
 The following recipe is used when designing a new symbol.
 
-#. Use :doc:`psbasemap </psbasemap>` (or engineering
+#. Use :doc:`basemap </basemap>` (or engineering
    paper!) to set up an empty grid that goes from -0.5 to +0.5 in both
    *x* and *y*. Use ruler and compass to draw your new symbol using
    straight lines, arcs of circles, and stand-alone geometrical objects
