--- a/doc_modern/rst/source/gallery/ex12.rst
+++ b/doc_modern/rst/source/gallery/ex12.rst
@@ -9,7 +9,7 @@ set of topographic readings non-uniformly distributed in the plane
 Wiley). We use :doc:`triangulate </triangulate>` to
 perform the optimal Delaunay triangulation, then use the output to draw
 the resulting network. We label the node numbers as well as the node
-values, and call :doc:`pscontour </pscontour>` to make a
+values, and call :doc:`contour </contour>` to make a
 contour map and image directly from the raw data. Thus, in this example
 we do not actually make grid files but still are able to contour and
 image the data. We use the CPT ``topo.cpt`` (created via
