--- a/doc_modern/rst/source/gallery/ex19.rst
+++ b/doc_modern/rst/source/gallery/ex19.rst
@@ -9,9 +9,9 @@ an international conference on GMT in Honolulu. We use
 :doc:`grdmath </grdmath>`, :doc:`makecpt </makecpt>`, and
 :doc:`grdimage </grdimage>` to draw pleasing color
 backgrounds on maps, and overlay
-:doc:`pscoast </pscoast>` clip paths to have the
+:doc:`coast </coast>` clip paths to have the
 patterns change at the coastlines. The middle panel demonstrates a
-simple :doc:`pscoast </pscoast>` call where the built-in
+simple :doc:`coast </coast>` call where the built-in
 pattern # 86 is drawn at 100 dpi but with the black and white pixels
 replaced with color combinations. At the same time the ocean is filled
 with a repeating image of a circuit board (provides in Sun raster
