--- a/doc_modern/rst/source/gallery/ex34.rst
+++ b/doc_modern/rst/source/gallery/ex34.rst
@@ -4,7 +4,7 @@
 ----------------------------------------------------
 
 The script produces the plot in Figure. Here
-we demonstrate how :doc:`pscoast </pscoast>` can be used to extract
+we demonstrate how :doc:`coast </coast>` can be used to extract
 and plot country polygons.  We show two panels; one in which we do
 a basic basemap and another where we lay down a color topography
 image and then place a transparent layer identifying the future
