--- a/doc_modern/rst/source/gallery/ex22.rst
+++ b/doc_modern/rst/source/gallery/ex22.rst
@@ -11,7 +11,7 @@ remove the comment to get the actual current seismicity plot using the
 live data. The main purpose of this script is not to show how to plot a
 map background and a few circles, but rather demonstrate how a map
 legend may be composed using the new tool
-:doc:`pslegend </pslegend>`. Some scripting is used to
+:doc:`legend </legend>`. Some scripting is used to
 pull out information from the data file that is later used in the
 legend. The legend will normally have the email address of the script
 owner; here that command is commented out and the user is hardwired to
